Fixed text wrapping

--- a/client/src/app/components/list/list-item/list-item.component.scss
+++ b/client/src/app/components/list/list-item/list-item.component.scss
@@ -31,6 +31,10 @@
 	font-size: 20px;	
 }
 
+.content {
+	word-break: break-word;
+}
+
 .nsm-dialog {
 	width: 90vw;
 	max-width: 700px;
